[package]
name = "doddi-rust-analyzer"
version = "0.1.0"
authors = ["markdodgson <mdodgson@sonatype.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
execute = "0.2.8"
